base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio-api
  labels:
    app: devops-portfolio-api
spec:
  type: ClusterIP
  selector:
    app: devops-portfolio-api
  ports:
    - port: 80
      targetPort: http
      name: http
